--- a/dicee.html
+++ b/dicee.html
@@ -10,7 +10,7 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Test your Luck</h1>
 
       <div class="dice">
         <p>Player 1</p>
@@ -21,7 +21,8 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice6.png">
       </div>
-
+        <br><br>
+      <button onclick="start()" class="tombol">Let's Go!</button>
     </div>
 
     <script src="index.js" charset="utf-8"></script>
@@ -29,6 +30,6 @@
       </body>
 
       <footer>
-       <h3>Note: Refresh to play again.</h3>
+   © Vaibhav Deep 2021.
       </footer>
     </html>
